src/Services/letServices/infrastructure/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: let-erp
  labels:
    app.kubernetes.io/part-of: let-erp
